force-app/main/default/objects/Corporate_Visitor__c/Corporate_Visitor__c.object-meta.xml
<CustomObject>
    <description>To store all the corporate visitors</description>
    <label>Corporate Visitor</label>
    <nameField>
        <label>Meeting Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Visitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>