force-app/main/default/objects/Corporate_Visitor__c/fields/Arrived__c.field-meta.xml
<CustomField>
    <fullName>Arrived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when the visitors arrive</inlineHelpText>
    <label>Arrived</label>
    <type>Checkbox</type>
</CustomField>