force-app/main/default/objects/Corporate_Visitor__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <inlineHelpText>The number to contact when visitors arrive</inlineHelpText>
    <label>Contact Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>