force-app/main/default/objects/Corporate_Visitor__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <inlineHelpText>The person to contact when visitors arrive</inlineHelpText>
    <label>Contact Person</label>
    <length>30</length>
    <type>Text</type>
</CustomField>