force-app/main/default/objects/Corporate_Visitor__c/fields/Date_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting__c</fullName>
    <label>Date of Meeting</label>
    <type>DateTime</type>
</CustomField>