force-app/main/default/objects/Corporate_Visitor__c/fields/Organiser__c.field-meta.xml
<CustomField>
    <fullName>Organiser__c</fullName>
    <inlineHelpText>The internal name of the organiser of the meeting</inlineHelpText>
    <label>Organiser</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>