force-app/main/default/objects/Corporate_Visitor__c/fields/Organiser_Email__c.field-meta.xml
<CustomField>
    <fullName>Organiser_Email__c</fullName>
    <inlineHelpText>Email address for confirmation of booking</inlineHelpText>
    <label>Organiser Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>