force-app/main/default/objects/Corporate_Visitor__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <formula>DATEVALUE(Date_of_Meeting__c) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if visit is today</inlineHelpText>
    <label>Today</label>
    <type>Checkbox</type>
</CustomField>