force-app/main/default/objects/Corporate_Visitor__c/fields/Visitor_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Email_1__c</fullName>
    <inlineHelpText>Name of visitor 2</inlineHelpText>
    <label>Visitor Email 1</label>
    <type>Email</type>
</CustomField>