force-app/main/default/objects/Corporate_Visitor__c/fields/Visitor_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Email_2__c</fullName>
    <label>Visitor Email 2</label>
    <type>Email</type>
</CustomField>