force-app/main/default/objects/Corporate_Visitor__c/fields/Visitor_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Email_3__c</fullName>
    <label>Visitor Email 3</label>
    <type>Email</type>
</CustomField>