force-app/main/default/objects/Corporate_Visitor__c/fields/Visitor_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Name_1__c</fullName>
    <inlineHelpText>Name of Visitor</inlineHelpText>
    <label>Visitor Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>