force-app/main/default/objects/Corporate_Visitor__c/fields/Visitor_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Name_3__c</fullName>
    <label>Visitor Name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>