force-app/main/default/objects/Corporate_Visitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Arrived__c</columns>
    <columns>Visitor_Name_1__c</columns>
    <columns>Visitor_Email_1__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Contact_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>